deploy/kubernetes/locust/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  namespace: infervoyage-dev
  labels:
    app: locust-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      containers:
        - name: locust-worker
          image: infervoyage-locust:latest
          imagePullPolicy: IfNotPresent
          args:
            - --worker
            - --master-host=locust-master
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
